--- a/index.html
+++ b/index.html
@@ -190,6 +190,15 @@
                 <p class="tip">💡 Tip: Maak regelmatig een back-up van je gegevens door gebruik te maken van de "Exporteer als JSON" knop.</p>
             </div>
         </div>
+ <div class="warning">
+            <strong>Waarschuwing:</strong> Deze tool is alleen bedoeld als hulpmiddel en vervangt geen professioneel medisch advies. Raadpleeg altijd een arts bij gezondheidsklachten.
+        </div>
+        <div class="copyright">
+            © 2025 Kumbhaka Ademtracker
+            <div class="website-link">
+                <a href="https://www.kumbhaka.nu" target="_blank">www.kumbhaka.nu</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
