--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Kumbhaka Ademtracker</h1>
-            <p class="subtitle">Volg je dagelijkse oefeningen, ervaringen en vooruitgang</p>
+            <div class="header-content">
+                <img src="logo.jpg" alt="Kumbhaka Logo" class="logo">
+                <div class="header-text">
+                    <h1>Kumbhaka Ademtracker</h1>
+                    <p class="subtitle">Volg je dagelijkse oefeningen, ervaringen en vooruitgang</p>
+                </div>
+            </div>
         </div>
         
         <div class="week-selector">
@@ -190,7 +195,8 @@
                 <p class="tip">💡 Tip: Maak regelmatig een back-up van je gegevens door gebruik te maken van de "Exporteer als JSON" knop.</p>
             </div>
         </div>
- <div class="warning">
+
+        <div class="warning">
             <strong>Waarschuwing:</strong> Deze tool is alleen bedoeld als hulpmiddel en vervangt geen professioneel medisch advies. Raadpleeg altijd een arts bij gezondheidsklachten.
         </div>
         <div class="copyright">
