--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <thead>
                     <tr>
                         <th>Dag</th>
-                        <th>BOLT Score Ochtend</th>
-                        <th>BOLT Score Avond</th>
+                        <th>BOLT Score Ochtend (in sec)</th>
+                        <th>BOLT Score Avond (in sec)</th>
                         <th>4 min Licht, Laag, Langzaam Ochtend</th>
                         <th>4 min Licht, Laag, Langzaam Avond</th>
                         <th>Mond Tape Tijdens Slaap</th>
@@ -54,56 +54,56 @@
                 <tbody>
                     <tr>
                         <td>Maandag</td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                     </tr>
                     <tr>
                         <td>Dinsdag</td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                     </tr>
                     <tr>
                         <td>Woensdag</td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
-                        <td><input type="number" max="100" class="input-field"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                     </tr>
                     <tr>
                         <td>Donderdag</td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                     </tr>
                     <tr>
                         <td>Vrijdag</td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                     </tr>
                     <tr>
                         <td>Zaterdag</td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                     </tr>
                     <tr>
                         <td>Zondag</td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
-                        <td><input type="number" min="0" max="100" class="input-field"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
+                        <td><input type="number" class="input-field" min="0" max="50"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
                         <td><input type="checkbox" class="input-field"></td>
@@ -191,21 +191,26 @@
 
         <div class="button-container">
             <div class="button-group">
-                <button onclick="exportToCSV()">Exporteer naar Excel</button>
+                <button id="exportCSV">Exporteer naar Excel</button>
                 <button class="info-icon" title="Download je gegevens als bestand dat je kunt openen in Excel of andere spreadsheet programma's">?</button>
             </div>
             <div class="button-group">
-                <button onclick="exportToJSON()">Maak Back-up</button>
+                <button id="exportJSON">Maak Back-up</button>
                 <button class="info-icon" title="Download een volledige kopie van al je gegevens. Handig om later weer te kunnen importeren.">?</button>
             </div>
             <div class="button-group">
-                <button onclick="clearAllData()" class="warning-button">Alles Wissen</button>
+                <input type="file" id="importJSON" accept=".json" style="display: none;">
+                <button id="importJSONBtn">Herstel Back-up</button>
+                <button class="info-icon" title="Herstel je gegevens van een eerder gemaakte back-up">?</button>
+            </div>
+            <div class="button-group">
+                <button id="clearAll" class="warning-button">Alles Wissen</button>
                 <button class="info-icon" title="Wist alle opgeslagen gegevens. Let op: dit kan niet ongedaan worden gemaakt!">?</button>
             </div>
         </div>
 
         <div class="warning">
-            <strong>Waarschuwing:</strong> Je gegevens worden automatisch opgeslagen in je webbrowser (localStorage). Deze tool is alleen bedoeld als hulpmiddel en vervangt geen professioneel medisch advies. Raadpleeg altijd een arts bij gezondheidsklachten.
+            <strong>Belangrijk:</strong> Je gegevens worden automatisch opgeslagen in je webbrowser (localStorage). Deze tool is alleen bedoeld als hulpmiddel en vervangt geen professioneel medisch advies. Raadpleeg altijd een arts bij gezondheidsklachten.
         </div>
         <div class="copyright">
             © 2025 Kumbhaka Ademtracker
